plugins/scripting/scripting-tests/testData/diagnostics/repl/unsafe_cast_assignment_within_class.kts
// SNIPPET

var x: Int? = null
x = 1
val y: Int <!INITIALIZER_TYPE_MISMATCH!>=<!> x

class Foo {
    init {
        x = null
    }
}

val z: Int <!INITIALIZER_TYPE_MISMATCH!>=<!> x
